--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,8 +7,17 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  # - name: Posts
+  #   url: '#posts'
+  #   weight: 20
+  # - name: Projects
+  #   url: '#projects'
+  #   weight: 30
+  # - name: Talks
+  #   url: '#talks'
+  #   weight: 40
   - name: Publications
-    url: '#collection'
+    url: '#featured'
     weight: 20
   - name: Contact
     url: '#contact'
