--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Publications
-    url: '#collection'
+    url: '#featured'
     weight: 20
   - name: Experience
     url: '#experience'
