--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Publications
     url: '#collection'
     weight: 20
-  # - name: Experience
-  #   url: '#experience'
-  #   weight: 30
+  - name: Experience
+    url: '#experience'
+    weight: 30
   - name: Contact
     url: '#contact'
     weight: 40
